<resources>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="add_post">Add Post</string>
    <string name="post_photo">Post Photo</string>
    <string name="select_image">Select Image</string>
    <string name="sport_type">Sport Type</string>
    <string name="location">Location</string>
    <string name="caption">Caption</string>
    <string name="remember_me">Remember Me</string>
    <string name="add_sport_date">Add Sport date</string>
    <string name="date_time">Date Time</string>
    <string name="where">Where</string>
    <string name="when">When</string>
    <string name="selected_date_time">Selected Date Time</string>
    <string name="pick_date_time">Pick Date Time</string>
    <string name="back">Back </string>
    <string name="profile_image"> Profile Image </string>
    <string name="update_image">Update Image</string>
    <string name="user_name">User Name</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete">Delete</string>
    <string name="app_name">Sporty</string>
    <string name="logout">Log Out</string>
    <string name="sportdate_with_me">Sportydate With me</string>
    <string name="timestamp">Timestamp</string>
    <string name="sport_time">Sporty Time:</string>
    <string name="location_post">Location:</string>
    <string name="where_are_you">Where are you?</string>
    <string name="to_see_all_post_by_locations_click_here">To see all post by locations click here</string>
    <string name="select_location">Select location</string>
    <string name="pick_location">pick location</string>
    <string name="sport_type_title">Sport type:</string>
    <string name="sport_type_text">sport type</string>
</resources>