<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".Modules.AddPost.AddPostFragment">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/fun_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back"
                android:src="@drawable/ic_back"
                android:tint="@color/blue" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_post"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/ivSelectedImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/cream"
                android:contentDescription="@string/post_photo"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/btnSelectImage"
                android:layout_margin="20dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile"
                android:scaleType="fitCenter"
                android:src="@drawable/add_image" />

        </FrameLayout>

        <EditText
            android:id="@+id/etSportType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/sport_type"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/pink" />

        <EditText
            android:id="@+id/etCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/caption"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/pink" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/where"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/pink" />

        <!-- Playdate specific field -->
        <LinearLayout
            android:id="@+id/dateTimeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="3"
                android:background="@drawable/custom_edittext"
                android:padding="10dp"
                android:text="@string/selected_date_time"
                android:textColor="@color/pink"
                android:textSize="18sp" />
            <ImageButton
                android:id="@+id/btnPickDateTime"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/profile"
                android:scaleType="fitCenter"
                android:src="@drawable/select_datatime" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAddPost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_blue"
            android:text="@string/add_post"
            android:textColor="@color/cream" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@android:color/white" />

    </FrameLayout>
</FrameLayout>