<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/postHeaderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSportdateWith"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center_vertical"
                    android:text="@string/sportdate_with_me"
                    android:textColor="#316A85"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="end"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnJoin"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_blue"
                    android:drawablePadding="4dp"
                    android:src="@drawable/ic_join"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/btnEditPost"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_blue"
                    android:drawablePadding="4dp"
                    android:src="@drawable/icon_edit" />

                <ImageView
                    android:id="@+id/btnDeletePost"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_blue"
                    android:drawablePadding="4dp"
                    android:src="@drawable/icon_delete" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/postHeaderLayout"
            android:scaleType="centerCrop" />


        <TextView
            android:id="@+id/tvCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivImage"
            android:layout_marginTop="8dp"
            android:text="@string/caption"
            android:textSize="16sp" />

        <!-- Add title to Location field -->
        <TextView
            android:id="@+id/tvLocationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvCaption"
            android:layout_marginTop="4dp"
            android:text="@string/location_post"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvLocationTitle"
            android:layout_toEndOf="@id/tvLocationTitle"
            android:text="@string/location"
            android:textSize="14sp" />

        <!-- Add title to Post Time field -->
        <TextView
            android:id="@+id/tvTimestampTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLocationTitle"
            android:layout_marginTop="4dp"
            android:text="@string/post_time"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/tvTimestampTitle"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@id/tvTimestampTitle"
            android:text="@string/timestamp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/tvTimestampTitle"
            android:text="@string/user_name"
            android:textSize="16sp" />

    </RelativeLayout>
</layout>