<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarProfile"
        layout="@layout/toolbar_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Modules.Profile.ProfileFragment">

        <ImageButton
            android:id="@+id/btnEdit"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_margin="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile"
            android:scaleType="fitCenter"
            android:src="@drawable/edit_profile" />

        <ImageButton
            android:id="@+id/btnLogout"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile"
            android:scaleType="fitCenter"
            android:src="@drawable/log_out" />

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/profile_image" />

        <Button
            android:id="@+id/btnUpdateImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivProfileImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/update_image"
            android:visibility="gone" />
    
        <RelativeLayout
            android:id="@+id/UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnUpdateImage">

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/user_name"
                android:textSize="22sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:autofillHints="My Name"
                android:inputType="text"
                android:textSize="18sp"
                android:visibility="gone" />
        </RelativeLayout>


        <!-- New RecyclerView for displaying user posts -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPosts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/UserName"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp" />
    </RelativeLayout>
</LinearLayout>