<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        android:src="@drawable/fun_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/logowithbackground" />

        <ImageView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="91dp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:importantForAccessibility="no"
            android:src="@drawable/meowdy" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/custom_edittext"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:required="true"
            android:textColorHint="@color/pink" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="45dp"
            android:autofillHints="password"
            android:background="@drawable/custom_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:required="true"
            android:textColorHint="@color/pink" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_button_red"
            android:text="@string/sign_up"
            android:textColor="@color/cream" />

    </LinearLayout>
</RelativeLayout>
